c2prj1_cards/grade.txt
Grading at Tue Jun 16 10:10:59 UTC 2020
Compiling cards.c
cards.c: In function ‘card_from_letters’:
cards.c:119:24: error: multi-character character constant [-Werror=multichar]
   else if(value_let == '10'){
                        ^
cc1: all warnings being treated as errors
Could not compile your card.c!

Overall Grade: FAILED
